--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <p>Para más información sobre nuestra aplicación, contáctanos en <strong>pastfast520@gmail.com</strong>.</p>
         <button class="btn">Descargar la App</button>
         <div class="social-icons">
-            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook" rel="noopener noreferrer">
+            <a href="https://www.facebook.com/share/14kiGBTQs9/" target="_blank" aria-label="Facebook" rel="noopener noreferrer">
                 <i class="fab fa-facebook"></i>
             </a>
             <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok" rel="noopener noreferrer">
