--- a/index.html
+++ b/index.html
@@ -264,11 +264,8 @@
             <a href="https://www.facebook.com/share/14kiGBTQs9/" target="_blank" aria-label="Facebook" rel="noopener noreferrer">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok" rel="noopener noreferrer">
+            <a href="https://www.tiktok.com/@fastpast6?_t=8rQeZWGMMBc&_r=1" target="_blank" aria-label="TikTok" rel="noopener noreferrer">
                 <i class="fab fa-tiktok"></i>
-            </a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram" rel="noopener noreferrer">
-                <i class="fab fa-instagram"></i>
             </a>
         </div>
     </section>
