--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@
             <a href="https://www.tiktok.com/@fastpast6?_t=8rQeZWGMMBc&_r=1" target="_blank" aria-label="TikTok" rel="noopener noreferrer">
                 <i class="fab fa-tiktok"></i>
             </a>
-            
+             <a href="https://www.instagram.com/fastpast2/profilecard/?igsh=MWZiem5zZDVmY2IwbA=="_blank" aria-label="TikTok" rel="noopener noreferrer">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
     </section>
 
