--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@
     <section id="faq" class="faq">
         <h2>Preguntas Frecuentes</h2>
         <div class="faq-item">
-            <h3>¿Cómo descargo la app?</h3>
-            <p>Puedes descargar nuestra aplicación desde la Play Store para dispositivos Android.</p>
+            <h3>Acerca de la aplicación</h3>
+            <p>Por el moemento no se cuenta con una aplicación 100% funcional
+		    dado a que hemos tenido dificultades con el correcto funcionamiento de la aplicación </p>
         </div>
         <div class="faq-item">
             <h3>¿Es compatible con mi ciudad?</h3>
