--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
         </div>
         <div class="faq-item">
             <h3>¿Es compatible con mi ciudad?</h3>
-            <p>Actualmente operamos en el municipio de Hidalgo, pero estamos trabajando para expandirnos a otras ciudades pronto.</p>
+            <p>Actualmente operamos en Ciudad Hidalgo, Michoacán de Ocampo.
+		    Dependiendo de las necesidades de nuestros usuarios iremos expandiendo el área de cobertura de la aplicación</p>
         </div>
     </section>
 
