--- a/imagenes.html
+++ b/imagenes.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2024 Galería de Imágenes - Diseñado con ❤️
+        &copy; 2024 Previsualización de la App - Diseñado elaborado por Héctor Guijosa
     </footer>
 </body>
 </html>
