--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <!-- Encabezado -->
     <header>
         <h1>Fast Past</h1>
-        <p>Tu aliado en la movilidad urbana</p>
+        <p>CONECTA TU CIUDAD, MEJORA TU VIDA</p>
     </header>
     
     <!-- Navegación -->
