--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
     <!-- Contacto -->
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Para más información sobre nuestra aplicación, contáctanos en <strong>pastfast520@gmail.com</strong>.</p>
+        <p>Para más información sobre nuestra aplicación, contáctanos en <strong>pastfast520@gmail.com</strong></p>
+	<p>  </p>
 	<div class="button-container">
             <a href="imagenes.html" class="btn">Previsualizar la App</a>
         </div>
