--- a/imagenes.html
+++ b/imagenes.html
@@ -81,7 +81,7 @@
         </div>
         <div class="button-container">
 
-            <a href="index.html" class="btn">Regresar a el inicio</a>
+            <a href="index.html" class="btn">Regresar al inicio</a>
         </div>
     </div>
     <footer>
