--- a/index.html
+++ b/index.html
@@ -282,9 +282,14 @@
     <footer>
         <p>© 2024 Fast Past. Todos los derechos reservados.</p>
         <div class="social-icons">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=61565851337192&mibextid=ZbWKwL" target="_blank" aria-label="Facebook" rel="noopener noreferrer">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.tiktok.com/@fastpast6?_t=8rQeZWGMMBc&_r=1" target="_blank" aria-label="TikTok" rel="noopener noreferrer">
+                <i class="fab fa-tiktok"></i>
+            </a>
+             <a href="https://www.instagram.com/fastpast2/profilecard/?igsh=MWZiem5zZDVmY2IwbA=="_blank" aria-label="TikTok" rel="noopener noreferrer">
+		<i class="fab fa-instagram"></i>
         </div>
     </footer>
 </body>
